--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "arraylist": "^0.1.0",
     "discord.js": "^11.3.2",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.6"
   }
 }
