--- a/conf.json.EXAMPLE
+++ b/conf.json.EXAMPLE
@@ -1,4 +1,5 @@
 { 
 	"prefix": "!",
-	"token": "Replace-me-with-a-real-token"
+	"token": "Replace-me-with-a-real-token",
+	"dbpw": "database-pw-insert"
 }
