Added npm update to package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^11.3.2",
     "moment": "^2.22.1",
     "mysql2": "^1.5.3",
+    "npm": "^6.0.0",
     "sequelize": "^4.37.6"
   }
 }
