Update for removal of commands

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "discord.js": "^11.3.2",
     "moment": "^2.22.1",
     "mysql2": "^1.5.3",
-    "npm": "^6.0.0",
+    "node-cleanup": "^2.1.2",
+    "npm": "^6.1.0",
     "sequelize": "^4.37.6"
   }
 }
