--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "check-node-version": "^3.2.0",
     "discord.js": "^11.3.2",
     "fs": "0.0.1-security",
+    "html-entities": "^1.2.1",
     "moment": "^2.22.1",
     "mysql2": "^1.5.3",
     "node-cleanup": "^2.1.2",
-    "npm": "^6.1.0",
+    "npm": "^6.4.1",
     "request": "^2.87.0",
     "sequelize": "^4.37.6"
   }
