Updated conf.json Layout, requires all database data instead of only password

--- a/conf.json.EXAMPLE
+++ b/conf.json.EXAMPLE
@@ -1,5 +1,11 @@
 { 
 	"prefix": "!",
 	"token": "Replace-me-with-a-real-token",
-	"dbpw": "database-pw-insert"
+	"db": {
+		"database": "database-name",
+		"user": "database-userName",
+		"dbpw": "database-pw-insert",
+		"host": "database-hostAdress",
+		"dialect": "mysql/postgresql, example 'mysql'"
+	}
 }
