--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "inhouse matchmaking",
   "main": "bot.js",
   "scripts": {
-    "test": "check-node-version --node \">= 8\" && mocha",
+    "test": "check-node-version --node \">= 8\" && mocha --exit",
     "start": "check-node-version --node \">= 8\" && node src/bot.js"
   },
   "repository": {
