--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
   "dependencies": {
     "check-node-version": "^3.2.0",
     "discord.js": "^11.3.2",
+    "dotenv": "^8.1.0",
     "fs": "0.0.1-security",
     "html-entities": "^1.2.1",
     "mocha": "^5.2.0",
     "moment": "^2.22.1",
+    "mysql": "^2.17.1",
     "mysql2": "^1.5.3",
     "node-cleanup": "^2.1.2",
     "npm": "^6.9.0",
     "request": "^2.87.0",
     "rewire": "^4.0.1",
-    "sequelize": "^4.37.6"
+    "sequelize": "^4.37.6",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "eslint": "^5.12.1",
