--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mocha": "^5.2.0",
     "moment": "^2.26.0",
     "mysql": "^2.18.1",
+    "mysql-promisify-pool": "^2.1.0",
     "mysql2": "^1.7.0",
     "node-cleanup": "^2.1.2",
     "npm": "^6.14.5",
