--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/Lolispo/inhouseBot#readme",
   "dependencies": {
+    "FormData": "^0.10.1",
+    "axios": "^0.19.2",
     "check-node-version": "^3.3.0",
     "discord.js": "^11.6.4",
     "dotenv": "^8.2.0",
