added steamids, basic config folder, dathost integration with mapveto

--- a/cfg/kosatupp_inhouse_coordinator_match.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match.cfg
@@ -16,7 +16,7 @@
 	//de_nuke, de_overpass, de_train, de_vertigo
 	"maplist"
 	{
-		"$$chosen_map$$"		"" 
+		$$chosen_map$$
 	}
 
 	"players_per_team"			"5" // max players per team, not including coach
