move hostconnectinfo, mapveto sync, csserver upd

--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -6,3 +6,10 @@ DB_USER
 DB_PW
 DB_NAME
 DB_DIALECT
+DATHOST_URL
+DATHOST_USER
+DATHOST_PW
+DATHOST_DB_URL
+DATHOST_DB_USER
+DATHOST_DB_PW
+DATHOST_DB_NAME
