--- a/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
@@ -16,7 +16,16 @@
 	//de_nuke, de_overpass, de_train, de_vertigo
 	"maplist"
 	{
-		"de_vertigo" 	""
+		
+      "de_dust2" 	""
+      "de_inferno" 	""
+      "de_mirage"		""
+      "de_nuke" 	""
+      "de_overpass" 	""
+      "de_train" 	""
+      "de_vertigo" 	""
+      "de_cache" 	""
+    
 	}
 
 	"players_per_team"			"5" // max players per team, not including coach
@@ -30,12 +39,12 @@
 	// A value between 1 and 99 should be specified.
 	// Prediction for terrorist team will be calculated based on this value,
 	// and automatically applied.
-	"favored_percentage_team1"		"51" // team1 
+	"favored_percentage_team1"		"55.6" // team1 
 	"favored_percentage_text"		"Inhouse coordinator prediction"
 
 	"team1"
 	{
-		"name"		"Petter and Robin"
+		"name"		"Petter's Gatekeepers"
 		"tag"		"T1"  // Replace the "clan tag" on the scoreboard.
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
@@ -44,19 +53,22 @@
 			// Any of the 3 formats (steam2, steam3, steam64 profile) are ok.
 			// You can also set player names that will be forced here.
 			// If you don't want to force player names, just use an empty quote.
-			undefined
+			"STEAM_1:0:24603593" 	""
+"STEAM_1:0:31051784" 	""
+
 		}
 	}
 
 	"team2"
 	{
-		"name"		"Morgan and Xavantex"
+		"name"		"Bambi på hal is + 2 Foxes"
 		"tag"		"T2"
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
 		"players"
 		{
-			undefined
+			"STEAM_1:1:41929909" 	""
+
 		}
 	}
 
