--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "check-node-version": "^3.3.0",
     "discord.js": "^11.6.4",
     "dotenv": "^8.2.0",
+    "form-data": "^3.0.0",
     "fs": "0.0.1-security",
     "html-entities": "^1.3.1",
     "mocha": "^5.2.0",
@@ -36,11 +37,11 @@
     "node-cleanup": "^2.1.2",
     "npm": "^6.14.5",
     "request": "^2.88.2",
-    "rewire": "^4.0.1",
     "sequelize": "^4.44.4",
     "util": "^0.12.3"
   },
   "devDependencies": {
+    "rewire": "^4.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.20.2"
