--- a/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
@@ -16,16 +16,7 @@
 	//de_nuke, de_overpass, de_train, de_vertigo
 	"maplist"
 	{
-		
-      "de_dust2" 	""
-      "de_inferno" 	""
-      "de_mirage"		""
-      "de_nuke" 	""
-      "de_overpass" 	""
-      "de_train" 	""
-      "de_vertigo" 	""
-      "de_cache" 	""
-    
+		"de_overpass" 	""
 	}
 
 	"players_per_team"			"5" // max players per team, not including coach
@@ -39,12 +30,12 @@
 	// A value between 1 and 99 should be specified.
 	// Prediction for terrorist team will be calculated based on this value,
 	// and automatically applied.
-	"favored_percentage_team1"		"55.6" // team1 
+	"favored_percentage_team1"		"50" // team1 
 	"favored_percentage_text"		"Inhouse coordinator prediction"
 
 	"team1"
 	{
-		"name"		"Petter's Gatekeepers"
+		"name"		"4 Grillz and edgy Morgelev"
 		"tag"		"T1"  // Replace the "clan tag" on the scoreboard.
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
@@ -53,21 +44,21 @@
 			// Any of the 3 formats (steam2, steam3, steam64 profile) are ok.
 			// You can also set player names that will be forced here.
 			// If you don't want to force player names, just use an empty quote.
-			"STEAM_1:0:24603593" 	""
-"STEAM_1:0:31051784" 	""
+			"STEAM_0:0:7407204" 	""
 
 		}
 	}
 
 	"team2"
 	{
-		"name"		"Bambi på hal is + 2 Foxes"
+		"name"		"Petter och hans fyra getter"
 		"tag"		"T2"
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
 		"players"
 		{
-			"STEAM_1:1:41929909" 	""
+			"STEAM_1:0:24603593" 	""
+"STEAM_0:1:29138345" 	""
 
 		}
 	}
