better times, cs only change stuff

--- a/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
@@ -16,7 +16,7 @@
 	//de_nuke, de_overpass, de_train, de_vertigo
 	"maplist"
 	{
-		"de_overpass" 	""
+		"de_nuke" 	""
 	}
 
 	"players_per_team"			"5" // max players per team, not including coach
@@ -30,12 +30,12 @@
 	// A value between 1 and 99 should be specified.
 	// Prediction for terrorist team will be calculated based on this value,
 	// and automatically applied.
-	"favored_percentage_team1"		"50" // team1 
+	"favored_percentage_team1"		"42.4" // team1 
 	"favored_percentage_text"		"Inhouse coordinator prediction"
 
 	"team1"
 	{
-		"name"		"4 Grillz and edgy Morgelev"
+		"name"		"Team Petter"
 		"tag"		"T1"  // Replace the "clan tag" on the scoreboard.
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
@@ -44,21 +44,20 @@
 			// Any of the 3 formats (steam2, steam3, steam64 profile) are ok.
 			// You can also set player names that will be forced here.
 			// If you don't want to force player names, just use an empty quote.
-			"STEAM_0:0:7407204" 	""
+			"STEAM_1:0:24603593" 	""
 
 		}
 	}
 
 	"team2"
 	{
-		"name"		"Petter och hans fyra getter"
+		"name"		"Team Banza1"
 		"tag"		"T2"
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
 		"players"
 		{
-			"STEAM_1:0:24603593" 	""
-"STEAM_0:1:29138345" 	""
+			"STEAM_0:0:9391834" 	""
 
 		}
 	}
