Updated file structures, and started with reading from console logic

--- a/cfg/kosatupp_inhouse_coordinator_match.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match.cfg
@@ -4,7 +4,7 @@
 	"num_maps"		"1" // Must be an odd number or 2. 1->Bo1, 2->Bo2, 3->Bo3...
 
 	// If true, The maps will be preset using the first maps in the maplist.
-	"skip_veto"		"1" 
+	"skip_veto"		"$$skip_veto$$" 
 
 	// "standard" means the team that doesn't pick a map gets the side choice
 	// "never_knife" means team1 is always on CT first
