Renamed files standard, further cs integration, read console is reading, embed messages kinda working

--- a/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
@@ -4,7 +4,7 @@
 	"num_maps"		"1" // Must be an odd number or 2. 1->Bo1, 2->Bo2, 3->Bo3...
 
 	// If true, The maps will be preset using the first maps in the maplist.
-	"skip_veto"		"1" 
+	"skip_veto"		"$$skip_veto$$" 
 
 	// "standard" means the team that doesn't pick a map gets the side choice
 	// "never_knife" means team1 is always on CT first
@@ -16,7 +16,16 @@
 	//de_nuke, de_overpass, de_train, de_vertigo
 	"maplist"
 	{
-		"de_inferno" 	""
+		
+      "de_dust2" 	""
+      "de_inferno" 	""
+      "de_mirage"		""
+      "de_nuke" 	""
+      "de_overpass" 	""
+      "de_train" 	""
+      "de_vertigo" 	""
+      "de_cache" 	""
+    
 	}
 
 	"players_per_team"			"5" // max players per team, not including coach
@@ -30,12 +39,12 @@
 	// A value between 1 and 99 should be specified.
 	// Prediction for terrorist team will be calculated based on this value,
 	// and automatically applied.
-	"favored_percentage_team1"		"48.56000000000004" // team1 
+	"favored_percentage_team1"		"44" // team1 
 	"favored_percentage_text"		"Inhouse coordinator prediction"
 
 	"team1"
 	{
-		"name"		"Morgan + 4 Elephants"
+		"name"		"Team Petter"
 		"tag"		"T1"  // Replace the "clan tag" on the scoreboard.
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
@@ -44,28 +53,20 @@
 			// Any of the 3 formats (steam2, steam3, steam64 profile) are ok.
 			// You can also set player names that will be forced here.
 			// If you don't want to force player names, just use an empty quote.
-			"STEAM_0:0:28181825" 	""
-"STEAM_0:1:6530834" 	""
-"STEAM_0:0:674374" 	""
-"STEAM_0:1:2451151" 	""
-"STEAM_1:1:41929909" 	""
+			"STEAM_1:0:24603593" 	""
 
 		}
 	}
 
 	"team2"
 	{
-		"name"		"Petter + 4 Villians"
+		"name"		"Team Xavantex"
 		"tag"		"T2"
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
 		"players"
 		{
-			"STEAM_1:0:24603593" 	""
-"STEAM_0:1:8023473" 	""
-"STEAM_0:0:7407204" 	""
-"STEAM_0:0:9391834" 	""
-"STEAM_0:0:19410111" 	""
+			"STEAM_1:0:31051784" 	""
 
 		}
 	}
