Fixed embedded dota gif and redesigned message on matchup (steamlink

--- a/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
@@ -39,12 +39,12 @@
 	// A value between 1 and 99 should be specified.
 	// Prediction for terrorist team will be calculated based on this value,
 	// and automatically applied.
-	"favored_percentage_team1"		"44" // team1 
+	"favored_percentage_team1"		"91" // team1 
 	"favored_percentage_text"		"Inhouse coordinator prediction"
 
 	"team1"
 	{
-		"name"		"Team Petter"
+		"name"		"Petter and Robin"
 		"tag"		"T1"  // Replace the "clan tag" on the scoreboard.
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
@@ -54,13 +54,14 @@
 			// You can also set player names that will be forced here.
 			// If you don't want to force player names, just use an empty quote.
 			"STEAM_1:0:24603593" 	""
+"STEAM_1:1:41929909" 	""
 
 		}
 	}
 
 	"team2"
 	{
-		"name"		"Team Xavantex"
+		"name"		"Groovy and Xavantex"
 		"tag"		"T2"
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
