Ability to fetch gameStats after game has ended support (still not doing anything with it)

--- a/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
@@ -60,13 +60,14 @@
 
 	"team2"
 	{
-		"name"		"Team Groovy"
+		"name"		"Team Knas"
 		"tag"		"T2"
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
 		"players"
 		{
-			undefined
+			"STEAM_0:0:674374" 	""
+
 		}
 	}
 
