--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "npm": "^6.14.5",
     "request": "^2.88.2",
     "sequelize": "^4.44.4",
+    "simple-vdf": "^1.1.1",
     "util": "^0.12.3"
   },
   "devDependencies": {
