use time as matchid, fix small errors, error handling, regex errors

--- a/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
+++ b/cfg/kosatupp_inhouse_coordinator_match-gen.cfg
@@ -1,6 +1,6 @@
 "Match"
 {
-	"matchid"		"1"
+	"matchid"		"1593299975814"
 	"num_maps"		"1" // Must be an odd number or 2. 1->Bo1, 2->Bo2, 3->Bo3...
 
 	// If true, The maps will be preset using the first maps in the maplist.
@@ -39,7 +39,7 @@
 	// A value between 1 and 99 should be specified.
 	// Prediction for terrorist team will be calculated based on this value,
 	// and automatically applied.
-	"favored_percentage_team1"		"42.4" // team1 
+	"favored_percentage_team1"		"24.799999999999997" // team1 
 	"favored_percentage_text"		"Inhouse coordinator prediction"
 
 	"team1"
@@ -60,13 +60,14 @@
 
 	"team2"
 	{
-		"name"		"Team Groovy"
+		"name"		"Team Xavantex"
 		"tag"		"T2"
 		"flag"		"SE"
 		"logo"		"" //https://forums.alliedmods.net/showthread.php?t=258206
 		"players"
 		{
-			undefined
+			"STEAM_1:0:31051784" 	""
+
 		}
 	}
 
@@ -74,6 +75,6 @@
 	// You should not use this as a replacement for the live.cfg
 	"cvars"
 	{
-		"get5_mysql_force_matchid" "1"
+		"get5_mysql_force_matchid" "1593299975814"
 	}
 }
