--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "request": "^2.88.2",
     "sequelize": "^4.44.4",
     "simple-vdf": "^1.1.1",
+    "steamid": "^1.1.3",
     "util": "^0.12.3"
   },
   "devDependencies": {
