--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "check-node-version --node \">= 8\" && mocha --exit",
     "start": "check-node-version --node \">= 8\" && node src/bot.js",
-    "start-remote": "check-node-version --node \">= 8\" && node src/bot.js >> OUTPUT.log 2>ERROR.log",
+    "start-remote": "check-node-version --node \">= 8\" && node src/bot.js >> OUTPUT.log 2>>ERROR.log",
     "mocha": "mocha -g",
     "migration": "node src/database/migration.js"
   },
