--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   "rules": {
     "object-curly-spacing": ["error", "always"],
     "keyword-spacing": ["error", { "after": true, "before": true }],
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
