--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/Lolispo/inhouseBot#readme",
   "dependencies": {
+    "FormData": "^0.10.1",
     "axios": "^0.21.1",
     "check-node-version": "^3.3.0",
     "discord.js": "^12.5.3",
     "dotenv": "^8.6.0",
     "form-data": "^3.0.1",
-    "FormData": "^0.10.1",
     "fs": "0.0.1-security",
     "html-entities": "^1.4.0",
     "mocha": "^5.2.0",
@@ -43,6 +43,7 @@
     "request": "^2.88.2",
     "sequelize": "^5.22.4",
     "simple-vdf": "^1.1.1",
+    "socket.io-client": "^4.1.2",
     "steamid": "^1.1.3",
     "ts-node": "^10.0.0",
     "util": "^0.12.4"
