--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "migration.js",
   "scripts": {
     "build": "tsc",
-    "test": "check-node-version --node \">= 14\" && mocha -r ts-node/register tests/*.test.ts",
-    "start": "check-node-version --node \">= 14\" && ts-node src/bot.ts",
-    "start-remote": "check-node-version --node \">= 14\" && ts-node src/bot.ts >> OUTPUT.log 2>>ERROR.log",
+    "test": "check-node-version --node \">= 14\" && mocha -r ts-node/register tests/*.test.ts --exit",
+    "start": "check-node-version --node \">= 14\" && ts-node src/index.ts",
+    "start-remote": "check-node-version --node \">= 14\" && ts-node src/index.ts >> OUTPUT.log 2>>ERROR.log",
     "mocha": "mocha -g",
     "migration": "node src/database/migration.ts",
     "lint": "eslint . --ext .ts",
@@ -33,7 +33,6 @@
     "form-data": "^3.0.1",
     "fs": "0.0.1-security",
     "html-entities": "^1.4.0",
-    "mocha": "^5.2.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql-promisify-pool": "^2.1.0",
@@ -50,14 +49,18 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "@types/mocha": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "chai": "^4.3.4",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.23.4",
+    "jest": "^27.0.4",
+    "mocha": "^5.2.0",
     "prettier": "^2.3.0",
     "rewire": "^4.0.1",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
   }
 }
