--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "check-node-version --node \">= 14\" && mocha -r ts-node/register 'tests/**/*.test.ts' --exit",
-    "test-no-db": "check-node-version --node \">= 14\" && TEST_ENV=testwithoutdb mocha -r ts-node/register 'tests/**/*.test.ts' --exit",
+    "test": "jest --silent ts-node/register tests/",
+    "test-nodb": "TEST_ENV=testwithoutdb jest --silent ts-node/register tests/",
     "start": "check-node-version --node \">= 14\" && ts-node src/index.ts",
     "start-remote": "check-node-version --node \">= 14\" && ts-node src/index.ts >> OUTPUT.log 2>>ERROR.log",
-    "mocha": "mocha",
-    "spec": "mocha -r ts-node/register tests/commands/teammates.test.ts --exit",
     "migration": "node src/database/migration.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
@@ -35,6 +33,7 @@
     "form-data": "^3.0.1",
     "fs": "0.0.1-security",
     "html-entities": "^1.4.0",
+    "jest": "^27.0.5",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql-promisify-pool": "^2.1.0",
@@ -46,21 +45,22 @@
     "simple-vdf": "^1.1.1",
     "socket.io-client": "^4.1.2",
     "steamid": "^1.1.3",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "@types/mocha": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
-    "chai": "^4.3.4",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.23.4",
-    "mocha": "^5.2.0",
     "prettier": "^2.3.0",
     "rewire": "^4.0.1",
     "typescript": "^4.3.2"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
