--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "commonjs",
     "target": "es2018",
     "declaration": true,
+    "strict": true,
     "typeRoots": [
       "./node_modules/@types"
     ],
