--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,20 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "outDir": "dist",
-    "noImplicitAny": false,
     "module": "commonjs",
     "target": "es2018",
     "declaration": true,
+    // "strictNullChecks": true,
+    // "strictPropertyInitialization": true,
+    "alwaysStrict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "noImplicitAny": false,
+    "noImplicitThis": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "typeRoots": [
       "./node_modules/@types"
     ],
