--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "test": "jest --silent ts-node/register tests/",
     "test-nodb": "TEST_ENV=testwithoutdb jest --silent ts-node/register tests/",
-    "start": "check-node-version --node \">= 14\" && ts-node src/index.ts",
+    "start": "check-node-version --node \">= 14\" && npm run build && node dist/index.js",
+    "start:tsnode": "check-node-version --node \">= 14\" && ts-node src/index.ts",
     "start-remote": "check-node-version --node \">= 14\" && ts-node src/index.ts >> OUTPUT.log 2>>ERROR.log",
     "migration": "node src/database/migration.ts",
     "lint": "eslint . --ext .ts",
