--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "tsc",
     "test": "jest --silent ts-node/register tests/",
     "test-nodb": "TEST_ENV=testwithoutdb jest --silent ts-node/register tests/",
-    "start": "check-node-version --node \">= 14\" && npm run build && node dist/index.js",
-    "start:tsnode": "check-node-version --node \">= 14\" && ts-node src/index.ts",
-    "start-remote": "check-node-version --node \">= 14\" && npm run build && node dist/index.js >> OUTPUT.log 2>>ERROR.log",
+    "start": "check-node-version --node \">= 16\" && npm run build && node dist/index.js",
+    "start:tsnode": "check-node-version --node \">= 16\" && ts-node src/index.ts",
+    "start-remote": "check-node-version --node \">= 16\" && npm run build && node dist/index.js >> OUTPUT.log 2>>ERROR.log",
     "migration": "node src/database/migration.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
@@ -27,16 +27,16 @@
   },
   "homepage": "https://github.com/Lolispo/inhouseBot#readme",
   "dependencies": {
-    "FormData": "^0.10.1",
     "axios": "^0.21.1",
     "check-node-version": "^3.3.0",
     "child_process": "^1.0.2",
-    "discord.js": "^12.5.3",
+    "discord.js": "^14.8.0",
     "dotenv": "^8.6.0",
     "form-data": "^3.0.1",
+    "FormData": "^0.10.1",
     "fs": "0.0.1-security",
     "html-entities": "^1.4.0",
-    "jest": "^27.0.5",
+    "jest": "^29.5.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql-promisify-pool": "^2.1.0",
@@ -48,20 +48,21 @@
     "simple-vdf": "^1.1.1",
     "socket.io-client": "^4.1.2",
     "steamid": "^1.1.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.0.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "eslint": "^7.27.0",
-    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.23.4",
     "prettier": "^2.3.0",
     "rewire": "^4.0.1",
-    "typescript": "^4.3.2"
+    "typescript": "^5.0.2"
   },
   "directories": {
     "test": "tests"
